--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>575286239196-4dentb0avdbr7c0p8ubj94abncnhl39b.apps.googleusercontent.com</string>
+	<string>575286239196-7i5kppovq50d3pglishoh53gq48qdr9m.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.575286239196-4dentb0avdbr7c0p8ubj94abncnhl39b</string>
+	<string>com.googleusercontent.apps.575286239196-7i5kppovq50d3pglishoh53gq48qdr9m</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>575286239196-k7h0v9ge3n88kvl0jipce4mn3f1352ic.apps.googleusercontent.com</string>
+	<string>575286239196-028qpkh7a2ajlrtsd8alh499ak029v6v.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDpKJu-hS2wtF4oSP2u2QHQECwWKE15I8Y</string>
 	<key>GCM_SENDER_ID</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.reactjs.native.example.Bokkie</string>
+	<string>com.nbokkie.sys</string>
 	<key>PROJECT_ID</key>
 	<string>bokkie-app</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:575286239196:ios:026c7a56c46375207ef919</string>
+	<string>1:575286239196:ios:ea4f38c11679a0f67ef919</string>
 </dict>
 </plist>
